fix: full layout center alignment with tailwind

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,12 +1,14 @@
 /* app/globals.css */
+
 html,
 body {
   padding: 0;
   margin: 0;
-  height: 100%; /* ✅ 이것 반드시 필요 */
+  height: 100%;
+  width: 100%;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  background-color: #ffffff;
+  background-color: #f9fafb; /* gray-50 */
   color: #000000;
 }
 
